--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,18 @@ repositories {
 dependencies {
     def springBootVersion="2.1.0.RELEASE"
  
-	implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+	implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+		exclude module: "spring-boot-starter-tomcat"
+	}
+    compileOnly "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
+
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
     
     testImplementation 'junit:junit:4.+'
 	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+	
+	testRuntime "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
 }
 
 
